# search_tantivy

./: .gitignore  Cargo.toml  mix.exs
example_blog/: .gitignore  README.md  mix.exs
example_blog/assets/css/: app.css
example_blog/assets/js/: app.js
example_blog/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
example_blog/lib/: example_blog.ex  example_blog_web.ex
example_blog/lib/example_blog/: application.ex  blog.ex
example_blog/lib/example_blog_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
example_blog/lib/example_blog_web/components/: core_components.ex  layouts.ex
example_blog/lib/example_blog_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
example_blog/lib/example_blog_web/live/: blog_live.ex
example_blog/test/support/: conn_case.ex
guides/: api_guide.md  examples.md  getting_started.md  llm_guide.md
lib/: search_tantivy.ex
lib/search_tantivy/: aggregation.ex  application.ex  document.ex  ecto.ex  index.ex  index_registry.ex  index_supervisor.ex  native.ex  query.ex  schema.ex  searcher.ex  snippet.ex  tokenizer.ex  value.ex
native/search_tantivy_nif/: Cargo.toml  README.md
native/search_tantivy_nif/src/: document.rs  error.rs  index.rs  lib.rs  query.rs  schema.rs  search.rs  snippet.rs
test/: search_tantivy_test.exs  test_helper.exs
test/search_tantivy/: aggregation_test.exs  document_test.exs  ecto_test.exs  index_test.exs  query_test.exs  query_types_test.exs  schema_introspection_test.exs  schema_test.exs  search_test.exs  tokenizer_test.exs
test/support/: fixtures.ex
(+4 files in other folders)
